--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Modelo - Three.js</title>
+  <title>Modelo 3D - Three.js</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <script type="importmap">
     {
@@ -204,6 +204,7 @@
   </script>
 </body>
 </html>
+
 
 
 
